Bug 482987 - With fractional scale, bottom edge of screen has pixels that are held to the color of previously opened windows after closing those windows
Summary: With fractional scale, bottom edge of screen has pixels that are held to the ...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.0.1
Platform: Arch Linux Linux
: VHI normal
Target Milestone: ---
Assignee: patientone
URL:
Keywords: qt6
: 483612 484000 484804 484880 485472 485561 485652 485978 486130 487168 487386 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-03-09 14:42 UTC by Tyler Duzan
Modified: 2025-12-06 04:01 UTC (History)
31 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0.5
Sentry Crash Report:


Attachments
Screenshot showing the pixel line w/ Firefox open (13.53 KB, image/png)
2024-03-09 14:42 UTC, Tyler Duzan
Details
Video of the bug taken from iPhone showing the color shifting behavior (3.17 MB, application/octet-stream)
2024-03-09 14:49 UTC, Tyler Duzan
Details
The video shows artifacts appearing on the bottom edge of the screen after open any program (1.12 MB, video/mp4)
2024-03-14 11:41 UTC, patientone
Details
See-through line under the panel (60.08 KB, image/png)
2024-03-23 17:01 UTC, Michał Dybczak
Details
On Plasma 6.0.3 the pixels are less noticeable, but still present. (50.29 KB, image/png)
2024-03-30 10:58 UTC, patientone
Details
On Plasma 6.0.3 Single Pixel On The Right Side (54.00 KB, image/png)
2024-04-07 13:17 UTC, troytjh98
Details
colored-glitches (1.74 MB, image/jpeg)
2024-04-13 16:18 UTC, Webcapcha
Details
The fix is not complete yet (1.29 MB, video/webm)
2024-05-28 11:37 UTC, Wassim Akkari
Details
Artifacts still showing in steam (543.13 KB, image/png)
2024-05-29 08:23 UTC, Wassim Akkari
Details
Artifact still shows in VLC as well (127.86 KB, image/png)
2024-05-29 08:25 UTC, Wassim Akkari
Details
Another test on a another KDE distro with KDE 6.0.5 (110.97 KB, image/png)
2024-05-29 18:24 UTC, Wassim Akkari
Details
Same gap seen in steam (2.38 MB, image/png)
2024-05-29 18:31 UTC, Wassim Akkari
Details
150% scailing, scaled by the system, steam (2.09 MB, image/png)
2024-05-30 18:21 UTC, Michał Dybczak
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tyler Duzan 2024-03-09 14:42:18 UTC
Created attachment 166795 [details]
Screenshot showing the pixel line w/ Firefox open

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

First of all, I'm not certain I'm reporting this against the right product and component, I was unsure how to trace it specifically.  If I have some guidance on tracing this issue, I am happy to work with anyone in order to get more specific and confirm the impacted product/component.

I updated to 6.0.1 and noticed this issue almost immediately.  I originally had thought my laptop screen might be getting pixels stuck or there was something going on with the new floating taskbar.  I rebooted the system and verified that this is not present on a fresh boot after login, it's only after opening any application (for example, firefox) that the pixels start showing.  The color seems to be related to the colors present in the logo/icon on the taskbar of the application but not exactly.  It's possible to screenshot, so confirmed to not be a local hardware issue.

This issue is best seen visually, but essentially the very last row of my display has a series of pixels in a thin line that hold a color from a prior window, even though that window didn't extend visibly below the taskbar.  The pixels also shift in color as I type or take other actions.  This only happens since I upgrade to 6.0.1, and I am using Wayland.  I will attach both a screenshot and a video taken from my phone camera showing the color shift behavior.  As it shows up in screenshots, it's clear that it's not something physical involving my hardware.



STEPS TO REPRODUCE
1.  Start your computer and login to Plasma 6 desktop from the Login manager
2. Open any application in your taskbar
3. Wait a few moments
4. Pixel lines will appear on the bottom edge, not always in the same position but generally towards the left side of the screen.

OBSERVED RESULT

See the screenshot

EXPECTED RESULT

There should be no extraneous pixel line on the bottom of the display.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Arch Linux w/ 6.7.9-arch1-1 kernel and kwin 6.0.1-1
(available in About System)
KDE Plasma Version: 6.0.1
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2

ADDITIONAL INFORMATION

See attached screenshots
Comment 1 Tyler Duzan 2024-03-09 14:49:02 UTC
Created attachment 166797 [details]
Video of the bug taken from iPhone showing the color shifting behavior

This attachment is a video taken from my iPhone of the color shifting behavior as I move my mouse.  As I move my mouse you can see the pixels slightly shift colors back and forth.  The video is 9 seconds long and has been re-encoded using Handbrake and resized to 720p for size.
Comment 2 Nate Graham 2024-03-11 23:23:04 UTC
What GPU are you using? And also what scale factor is that screen using?
Comment 3 Tyler Duzan 2024-03-12 22:34:51 UTC
This is a Framework 13 AMD laptop with a Ryzen  7 7840U which has a Radeon 780M GPU, on the internal display which is a 2256x1504 display I am running at 150% scaling, which is the default setting.
Comment 4 Nate Graham 2024-03-13 17:56:41 UTC
Thanks.
Comment 5 patientone 2024-03-14 11:39:23 UTC
I have the same problem and it affects every program I open. When I close the program, these artifacts do not disappear. My Laptop is Legion 16ACH6H, AMD Ryzen 7 5800H + NVIDA 3060,  2560x1600, scalling 150%.
Comment 6 patientone 2024-03-14 11:41:39 UTC
Created attachment 167160 [details]
The video shows artifacts appearing on the bottom edge of the screen after open any program
Comment 7 Tyler Duzan 2024-03-14 12:43:42 UTC
I updated to 6.0.2 Plasma today with an updated microcode and firmware package for AMD devices.  The same erroneous behavior is persisting, however.
Comment 8 Deuce Broom 2024-03-14 17:37:23 UTC
This bug has been happening on my 11th Gen Intel Framework Laptop 13, same 2256x1504@150% resolution/scale as the reporter. It happens on any scaling factor >100% except for 200%. The "corrupted" line of pixels at the bottom appears over the mouse cursor and only seems to be updated by the launch feedback icon, any touchpad gestures, and whenever the panel floats/unfloats.
Comment 9 Zamundaaa 2024-03-14 17:58:25 UTC
Yeah, this is a KWin bug. Most repaints happen in scaled logical coordinates, and that just doesn't match the pixels on the screen.
Comment 10 Reuben Parfrey 2024-03-20 11:00:50 UTC
I'm having this issue too, except the line of pixels appears on the right hand side of the screen. Using an Intel iGPU (HD Graphics 620) with a resolution of 2560x1440 at 150% scale. Managed to work around it temporarily by applying a scale factor of 160%.
Comment 11 Tyler Duzan 2024-03-20 20:02:12 UTC
Just wanted to update and confirm that by setting my scale factor to 160%, this makes the erroneous behavior noted in this bug go away.  The 150% scale factor is the default, however, so this behavior occurs with the default settings.
Comment 12 Ivan Jelic 2024-03-22 23:37:13 UTC
Hi there, confirming the bug, 2560x1440 at 150% (Framework 13 12th Gen Intel). Changing scale factor didn't help, though. Thanks
Comment 13 Michał Dybczak 2024-03-23 17:01:44 UTC
Created attachment 167662 [details]
See-through line under the panel

I also have this problem, but not all the time. I couldn't figure it out, what conditions must be met, for it to show up. Basically, it shows a thin, 1 pixel see through line under the panel. Desktop wallpaper is visible in it. It is especially visible with dark panel.

I'm currently using Plasma 6.0.3 and to be honest, I'm not sure if I have seen it on that version. I'll let you know if I spot it again.

See the attached screenshot. Please, zoom it strongly to see pixels. Only then the line under the panel is visible. However, in normal screen, this is somehow more visible.
Comment 14 patientone 2024-03-30 10:58:17 UTC
Created attachment 167937 [details]
On Plasma 6.0.3 the pixels are less noticeable, but still present.

A small update, Plasma has been updated to 6.0.3, pixels on the bottom edge are less noticeable, but still present. I can confirm that changing the scaling to 160% or 130% eliminates this problem, but it is not a solution.
Comment 15 Michał Dybczak 2024-03-30 18:26:47 UTC
I just updated to Plasma 6.0.3. The easiest way to spot the bug is to run a YouTube video that has black stripes (different format than monitor) above and below the video, so when the see-through line is present, it can be very clearly visible. In this case, it still is.

My monitor is 1440p with 130% scale, Wayland. The see-through line below the panel is still there. As far I can tell, nothing has changed.
Comment 16 Zamundaaa 2024-04-05 13:51:19 UTC
*** Bug 484880 has been marked as a duplicate of this bug. ***
Comment 17 troytjh98 2024-04-07 13:17:54 UTC
Created attachment 168250 [details]
On Plasma 6.0.3 Single Pixel On The Right Side

I'm seeing a similar issue with a single pixel appearing on the right side of the screen on start up or waking from sleep with 1366x768@125% scaling. Switching to 120% and back to 125% seems to work around the issue.
Comment 18 Nate Graham 2024-04-11 01:58:40 UTC
*** Bug 484000 has been marked as a duplicate of this bug. ***
Comment 19 Zamundaaa 2024-04-13 12:17:56 UTC
*** Bug 485472 has been marked as a duplicate of this bug. ***
Comment 20 Webcapcha 2024-04-13 16:18:14 UTC
I'm on the latest Plasma (Arch linux) and in my case I see even colored glitches as a form of dashes. It looks like it's 100% hardware screen issue. But I wasn't able to see on Fedora Gnome live usb or Windows. At least it wasn't noticable.

Would appreciate it if we can top up the priority of this bug
Comment 21 Webcapcha 2024-04-13 16:18:54 UTC
Created attachment 168463 [details]
colored-glitches
Comment 22 Zamundaaa 2024-04-14 09:22:59 UTC
*** Bug 483612 has been marked as a duplicate of this bug. ***
Comment 23 Tyler Duzan 2024-04-14 16:29:20 UTC
Just updating this to say I'm now on Plasma 6.0.3, QT 6.7.0, and still on KDE Framework 6.0.0.  The behavior remains the same.
Comment 24 JonnyRobbie 2024-04-15 15:50:33 UTC
I wanted to chime in with the reproduction. 1440p@150%, I have a glitch line on the right side of the monitor. It's most noticeable when there's a full screen app, like firefox video fullscreen, mpv fullscreen or a video game.
I also do have a secondary 4k monitor/tv connected at 200% and I don't notice the scaling bug there.
Comment 25 Zamundaaa 2024-04-15 20:44:20 UTC
*** Bug 485561 has been marked as a duplicate of this bug. ***
Comment 26 Zamundaaa 2024-04-17 11:54:17 UTC
*** Bug 485652 has been marked as a duplicate of this bug. ***
Comment 27 Akseli Lahtinen 2024-04-17 13:55:46 UTC
I can't get exact same issue, but there is a very minimal gap on some fractional scale percentages between panel and bottom of the screen.

Set bottom panel to non-floating, full width and "windows go below". Then open an image that is big enough to fill your screen.

On some values, like 105% scaling, there is a teeny tiny gap between the bottom panel and screen edge that can show either wallpaper, or the image you were seeing. I wouldn't be surprised if this gap is not properly "cleared" at times, causing old data showing in there.


Screen Resolution: 3440x1440
Operating System: Fedora Linux 40
KDE Plasma Version: 6.0.80
KDE Frameworks Version: 6.2.0
Qt Version: 6.6.2
Kernel Version: 6.8.5-301.fc40.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 15.5 GiB of RAM
Graphics Processor: AMD Radeon RX 6600
Comment 28 Zamundaaa 2024-04-23 00:12:46 UTC
*** Bug 485978 has been marked as a duplicate of this bug. ***
Comment 29 mikar_gibbros 2024-04-23 00:37:16 UTC
On 3200x2000 screen, Wayland, I have a azure line of glitched pixels only when using Scaling 175%, 225%, and 300%.
Comment 30 Zamundaaa 2024-04-25 21:52:31 UTC
*** Bug 486130 has been marked as a duplicate of this bug. ***
Comment 31 Zamundaaa 2024-05-08 23:41:51 UTC
*** Bug 484804 has been marked as a duplicate of this bug. ***
Comment 32 Mannnn 2024-05-10 09:43:37 UTC
This (and other glitches) effects Asahi Linux too as Macbooks have  HD+ screen means fractional scaling is a must, 100% is too small, 200% too big.
Comment 33 JonnyRobbie 2024-05-11 11:49:28 UTC
Is there any investigation ongoing? Would the fix come in the next bug release or at least in 6.1?
Comment 34 Bug Janitor Service 2024-05-12 00:47:27 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/5714
Comment 35 Zamundaaa 2024-05-13 08:17:52 UTC
Git commit dcda15e5e31899e92e9895ffc908e92b47d3ab9d by Xaver Hugl.
Committed on 13/05/2024 at 08:07.
Pushed by zamundaaa into branch 'master'.

core/renderlayer: don't implicitly truncate width and height of the geometry

Otherwise, repaint regions will be limited to a pixel less than it should be
in some cases
FIXED-IN: 6.0.5

M  +1    -1    src/core/renderlayer.cpp

https://invent.kde.org/plasma/kwin/-/commit/dcda15e5e31899e92e9895ffc908e92b47d3ab9d
Comment 36 Zamundaaa 2024-05-13 08:40:39 UTC
Git commit 6f224350961453b286b4865798a624f3560bde01 by Xaver Hugl.
Committed on 13/05/2024 at 08:28.
Pushed by zamundaaa into branch 'Plasma/6.0'.

core/renderlayer: don't implicitly truncate width and height of the geometry

Otherwise, repaint regions will be limited to a pixel less than it should be
in some cases
FIXED-IN: 6.0.5


(cherry picked from commit dcda15e5e31899e92e9895ffc908e92b47d3ab9d)

M  +1    -1    src/core/renderlayer.cpp

https://invent.kde.org/plasma/kwin/-/commit/6f224350961453b286b4865798a624f3560bde01
Comment 37 Zamundaaa 2024-05-18 20:52:41 UTC
*** Bug 487168 has been marked as a duplicate of this bug. ***
Comment 38 Tyler Duzan 2024-05-18 21:36:40 UTC
I'm waiting for 6.0.5 to be available in Arch, and then I will confirm the fix in a comment here.  Thanks for the rapid resolution!
Comment 39 Nate Graham 2024-05-22 21:05:57 UTC
*** Bug 487386 has been marked as a duplicate of this bug. ***
Comment 40 Wassim Akkari 2024-05-28 11:37:55 UTC
Created attachment 169908 [details]
The fix is not complete yet

Hello I'm now under 6.0.5, this issue with lower edge and right edge are fixed but there is a still small one that you guys didn't notice with (close, maximize, minimize) buttons.
I have attached a small video showing the issue.
Comment 41 Zamundaaa 2024-05-28 12:44:49 UTC
That's a different issue, please make a separate bug report for that
Comment 42 Michał Dybczak 2024-05-28 12:47:53 UTC
I can confirm that on 6.0.5 this bug is gone, at least for me (Wayland, 1440p, AMD Ryzen).
Comment 43 Tyler Duzan 2024-05-29 02:38:30 UTC
Just updated my system and can confirm this is now fixed.  Thank you all.
Comment 44 Wassim Akkari 2024-05-29 08:21:10 UTC
(In reply to Zamundaaa from comment #41)
> I don't think it's different because the same blinking is happening there and only when fractional scaling is enabled, and also the same issue with horizontal bar still exist with XWayland apps (ex: steam) I'm going to attach a screenshot in the next comment.
Comment 45 Wassim Akkari 2024-05-29 08:23:36 UTC
Created attachment 169928 [details]
Artifacts still showing in steam

There is also a vertical line still showing in XWayland apps like steam please check screenshot attached
Comment 46 Wassim Akkari 2024-05-29 08:25:35 UTC
Created attachment 169929 [details]
Artifact still shows in VLC as well
Comment 47 Michał Dybczak 2024-05-29 13:45:24 UTC
On my side VLC doesn't produce those artifacts. Something else must be happening here.
Comment 48 Axel 2024-05-29 13:50:31 UTC
(In reply to Wassim Akkari from comment #40)
> Created attachment 169908 [details]
> The fix is not complete yet
> 
> Hello I'm now under 6.0.5, this issue with lower edge and right edge are
> fixed but there is a still small one that you guys didn't notice with
> (close, maximize, minimize) buttons.
> I have attached a small video showing the issue.

In my case is till have a thin line showing on Dolphin's header area
Comment 49 Michał Dybczak 2024-05-29 13:58:26 UTC
Please, test this in a new, vanilla user (with default configs).
 It seems like this specific bug is fixed (after 6.0.5 update it went away for me and others) but something else is happening as well. At this point, it's not clear what and where. So it's time for debugging data, because now all we have is that certain, similar looking issues are still happening, but the cause is unknown.
Comment 50 Michał Dybczak 2024-05-29 14:03:44 UTC
Ah, I checked Steam (XWayland window) in full screen and there is no issue for me, just FYI.

Operating System: Manjaro Linux 
KDE Plasma Version: 6.0.5
KDE Frameworks Version: 6.2.0
Qt Version: 6.7.1
Kernel Version: 6.9.2-1-MANJARO (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 7840HS w/ Radeon 780M Graphics
Memory: 30.6 GiB of RAM
Graphics Processor: AMD Radeon Graphics
Manufacturer: TUXEDO
Product Name: TUXEDO Sirius 16 Gen1
Comment 51 Wassim Akkari 2024-05-29 17:58:36 UTC
(In reply to Michał Dybczak from comment #50)
> Ah, I checked Steam (XWayland window) in full screen and there is no issue


I have a confirmation from another user on reddit that he is still seeying some artifacts in XWayland apps after the patch although he doesn't see huge vertical lines like in my case. he reported that they very hard to notice.
In my case I tried 125% fractional scaling and I couldn't reproduce it, it only appears at 150% in my 2k 144 Hz screen
Make sure your fractional scaling factor is 150% I'm also using multiple screens 1x 2k screen (main) and 1 FHD screen (secondary)
Not sure if multiple screens has any effect on this issue!
As far as my config goes it's so vanilla as you can see from screenshots I shared I have no themes nor customizations.
Comment 52 Wassim Akkari 2024-05-29 18:24:48 UTC
Created attachment 169949 [details]
Another test on a another KDE distro with KDE 6.0.5

I have added another test I made on another KDE distro (Nobara OS) with KDE 6.0.5
I don't see same artifact I reported with cachyOS (earlier attachements)
In this one I could only notice a small gap in the header bar in VLC
Nothing seen on steam level
Comment 53 Wassim Akkari 2024-05-29 18:31:09 UTC
Created attachment 169951 [details]
Same gap seen in steam

I think this matches: 459373
Comment 54 Michał Dybczak 2024-05-29 20:44:43 UTC
My screen is 2K, that is 2560x1440, 165Hz. My scaling factor is 130%. I just scaled it to 150% to see if there is any difference, but no, nothing has changed. I can't detect the issue on VLC or Steam, or anywhere else.
Bug 459373 also doesn't seem to be present on my system.

Maybe this has to do with GPU? Mine is AMD Ryzen 7 7840HS. Are you on Intel? If so, on which driver? Maybe the graphical driver calculates the resolution differently in various windows, so there is some weird thing happening on the border of kwin and driver?

As to VLC in my case, menubar is hidden and exported to titlebar, so in my case, video area touches directly titlebar and no gap like yours is visible.

Your issue seems to be similar but different, because the bug here was about the pixel line below the panel (between panel and screen edge) at the bottom of the screen, no matter if you have used Wayland or XWayland windows. It was visible all the time in every full-screen mode. This is now gone. Your problem is a pixel line between window and panel or between window content and menubar/titlebar, so it happens within a window, while this bug here was happening outside of it, if I understand it correctly.

I think it's better to create another report for it and see if someone will match it to an existing bug or leave it as a new one.
Comment 55 Wassim Akkari 2024-05-30 16:07:15 UTC
It's very random I have to kde systems one Fedora witch doesn't suffer from the vertical or horizontal colored line but has the pixel gap in XWayland apps, The other one is CachyOS (Arch Linux) which has the colored line bug on steam, and some glitches with small blinking lines on other XWayland apps.
I have Legion5i Pro (i7 12700H) NVidia 3060 Mobile and driver is the latest 555 on both systems with the latest KDE version 6.0.5 

I also noticed some difference when I let XWayland apps when display setting is set to "Scaled by the system" the issue occur on VLC, Steam and even my Binance client app.
When I change it to "Apply Scaling themselves" the issue appears less it only remains on steam (it changes to a horizontal colored line instead of vertical) and I still have some glitches of blinking white lines in other apps like vlc but not the full vertical colored line.

Could you try altering that setting, make legacy apps "scaled by system" and leave scaling to 150% or try with different scaling and close steam and vlc and open them every time and test.
Comment 56 Wassim Akkari 2024-05-30 16:10:32 UTC
Make sure also your background photo is colorful and bright because It leaks whatever in your background for some reason.
Comment 57 Michał Dybczak 2024-05-30 18:21:45 UTC
Created attachment 170000 [details]
150% scailing, scaled by the system, steam

Now we are talking. I changed to:
- scaling 150%
- apps "scaled by system" 

and I could see a vertical line on the right edge of the screen when Steam was maximized. Nothing in VLC thou. Changing scaling to 130 makes it go away.

I'm sending screenshot of steam maximized window.

Now that at least we have some conditions to repeat this bug, there is a chance to fix it. So or so, this is different bug then this one here, although it has similar effect. Anyway, if that is reproducible, and we know the conditions, it's time to open a new bug report and describe it. Please, mention the number of this new report here, for the reference.

Aside of that, setting apps "scaled by system" looks bad for steam and I don't recommend it. With "let apps scale themselves" works much better.
Comment 58 Zamundaaa 2024-06-03 16:13:24 UTC
The issues with gaps next to windows are different bugs, see bug 480171 and bug 459373 for details
Comment 59 Doug 2025-12-06 04:01:10 UTC
Just experienced this in kubuntu 25.04. Previously ran Fedora 42 and 43 and don't remember seeing the bug.

Hopefully this is the additional information that helps the developers of Plasma...the line of flickering pixels only appears when I have Touch Mode="Always active". If I select "Automatically enable as needed" the line disappears.