core/renderlayer: don't implicitly truncate width and height of the geometry

Otherwise, repaint regions will be limited to a pixel less than it should be
in some cases

BUG: 482987
FIXED-IN: 6.0.5